--- a/CRMdeImobiliaria/pom.xml
+++ b/CRMdeImobiliaria/pom.xml
@@ -75,6 +75,13 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.17.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
